erDiagram
    profiles {
        UUID id PK
        TEXT email
        TEXT full_name
        TEXT avatar_url
        TEXT role
        TIMESTAMPTZ created_at
    }

    projects {
        UUID id PK
        TEXT name
        TEXT slug
        TEXT description
        UUID owner_id FK
    }

    user_project_preferences {
        UUID id PK
        UUID user_id FK
        UUID project_id FK
        JSONB settings
    }

    profiles ||--o{ projects : "owns"
    profiles ||--o{ user_project_preferences : "has"
    projects ||--o{ user_project_preferences : "has"
